# vit

./: _single_file.py  config.py  dataset.py  deit_trainer.py  get_resnet_weights.py  main.py  plot.py  pyproject.toml  schedulers.py  submission.py  train.py  train_teacher.py  utils.py
checkpoints/: resnet20_cifar10.pth  resnet32_cifar10.pth
layers/: attention.py  conv.py  cvt.py  embeddings.py  norm.py  transformers.py  vit.py
models/: coatnet.py  cvt.py  resnet.py  vit.py
