[project]
name = "vit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "huggingface-hub>=0.34.3",
    "lion-pytorch>=0.2.3",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "omegaconf>=2.3.0",
    "pandas>=2.3.1",
    "rdkit>=2025.3.5",
    "scikit-learn>=1.7.1",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "triton>=3.3.1",
    "wandb>=0.21.0",
]
